--- a/sass/components/_tooltip.scss
+++ b/sass/components/_tooltip.scss
@@ -26,5 +26,5 @@
   @include border-radius(0 0 14px 14px);
   background-color: #323232;
   z-index: -1;
-  @include transform-origin( top center);
+  @include transform-origin( 50% 10%);
 }
